# SCU-Course-Capacity-Query-Tool

./: .gitignore  README.md  config.json.example  pyproject.toml  run.py
